CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(NAME Server)
PROJECT(${NAME})

file(GLOB TOTEM_HEADER ${CMAKE_SOURCE_DIR}/Include/Totem/*.h)
SOURCE_GROUP("Source Files\\Include\\Totem" FILES ${TOTEM_HEADER})

file(GLOB CL_HEADER ${CMAKE_SOURCE_DIR}/Include/ClanLib/*.h)
SOURCE_GROUP("Source Files\\Include\\ClanLib" FILES ${CL_HEADER})

file(GLOB HEADER_FILES *.h)
file(GLOB SOURCE_FILES *.cpp)
SOURCE_GROUP("Source Files\\" FILES ${HEADER_FILES} ${SOURCE_FILES})

file(GLOB HEADER_FILES_DATABASE Database/*.h)
file(GLOB SOURCE_FILES_DATABASE Database/*.cpp)
SOURCE_GROUP("Source Files\\Database\\" FILES ${HEADER_FILES_DATABASE} ${SOURCE_FILES_DATABASE})

file(GLOB HEADER_FILES_GAMEWORLD GameWorld/*.h)
file(GLOB SOURCE_FILES_GAMEWORLD GameWorld/*.cpp)
SOURCE_GROUP("Source Files\\GameWorld\\" FILES ${HEADER_FILES_GAMEWORLD} ${SOURCE_FILES_GAMEWORLD})

add_executable(${NAME} 
	${HEADER_FILES} ${SOURCE_FILES} 
	${HEADER_FILES_DATABASE} ${SOURCE_FILES_DATABASE}
	${HEADER_FILES_GAMEWORLD} ${SOURCE_FILES_GAMEWORLD}
	${TOTEM_HEADER} 
	${CL_HEADER})

set_target_properties(${NAME} PROPERTIES FOLDER "Sources")

if (MSVC)
   set_target_properties(${NAME} PROPERTIES COMPILE_FLAGS "/Yuprecomp.h")
   set_source_files_properties(precomp.cpp PROPERTIES COMPILE_FLAGS "/Ycprecomp.h")
endif(MSVC)

FIND_PACKAGE(ClanLib REQUIRED)
FIND_PACKAGE(LibTCOD REQUIRED)
TARGET_LINK_LIBRARIES(${NAME} 
	debug ${CL_CORE_LIBRARY_DEBUG} 	 optimized ${CL_CORE_LIBRARY_RELEASE}
	debug ${CL_DB_LIBRARY_DEBUG} 	 optimized ${CL_DB_LIBRARY_RELEASE}
	debug ${CL_NET_LIBRARY_DEBUG} 	 optimized ${CL_NET_LIBRARY_RELEASE}
	debug ${CL_SQ_LIBRARY_DEBUG} 	 optimized ${CL_SQ_LIBRARY_RELEASE}
	debug ${CL_VORBIS_LIBRARY_DEBUG} optimized ${CL_VORBIS_LIBRARY_RELEASE}
	${TCOD_LIBRARY} ${TCOD_GUI_LIBRARY}
)

INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/Sources/Server/
)
